Update Time Slot Screen

--- a/mobile/locales/ar.json
+++ b/mobile/locales/ar.json
@@ -10,5 +10,6 @@
   "english": "الإنجليزية",
   "logout": "تسجيل الخروج",
   "error": "حدث خطأ ما",
-  "loading": "جاري التحميل..."
+  "loading": "جاري التحميل...",
+  "full": "ممتلئ"
 } 
