--- a/mobile/locales/en.json
+++ b/mobile/locales/en.json
@@ -10,5 +10,6 @@
   "english": "English",
   "logout": "Logout",
   "error": "Something went wrong",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "full": "Full"
 } 
