--- a/mobile/assets/locales/ar.json
+++ b/mobile/assets/locales/ar.json
@@ -3,6 +3,7 @@
   "select_hospital": "اختر المستشفى",
   "login_button": "تسجيل الدخول",
   "no_account": "ليس لديك حساب؟ سجل الآن",
+  "dont_have_account": "ليس لديك حساب؟",
   "confirmation": "تأكيد الحجز",
   "jointType": "نوع المفصل",
   "date": "التاريخ",
@@ -35,6 +36,7 @@
   "notifications": "الإشعارات",
   "pending_approval": "في انتظار الموافقة",
   "phone": "رقم الهاتف",
+  "phone_number": "رقم الهاتف",
   "password": "كلمة المرور",
   "welcome": "مرحباً",
   "select_language": "اختر اللغة",
@@ -54,12 +56,147 @@
   "cancel": "إلغاء",
   "please_login_first": "يرجى تسجيل الدخول أولاً",
   "new_booking": "احجز عملية جديدة",
-  "my_bookings": "حجوزاتي",
   "cancelled": "ملغي",
   "already_cancelled": "الحجز ملغي بالفعل",
   "markAllRead": "تحديد الكل كمقروء",
   "noNotifications": "لا توجد إشعارات",
   "notificationPermission": "إذن الإشعارات",
   "notificationPermissionMessage": "نحتاج إذنك لإرسال إشعارات عن حالة حجوزاتك",
-  "notificationPermissionDenied": "تم رفض إذن الإشعارات"
+  "notificationPermissionDenied": "تم رفض إذن الإشعارات",
+  
+  "welcome_to_imsc": "مرحباً بك في IMSC",
+  "welcome_message": "المركز الدولي للخدمات الطبية - حجز مواعيد المفاصل",
+  "logout_confirm": "هل أنت متأكد من تسجيل الخروج؟",
+  "book_appointment": "احجز موعد",
+  "book_new_appointment": "احجز موعد جديد",
+  "view_bookings": "عرض الحجوزات",
+  "view_manage_bookings": "عرض وإدارة الحجوزات",
+  "view_notifications": "عرض الإشعارات",
+  "about": "حول التطبيق",
+  "app_info": "معلومات التطبيق",
+  "quick_actions": "الإجراءات السريعة",
+  "quick_stats": "الإحصائيات السريعة",
+  "recent_activity": "النشاط الأخير",
+  "last_booking": "آخر حجز",
+  "check_my_bookings": "تحقق من حجوزاتي",
+  "profile": "الملف الشخصي",
+  "profile_subtitle": "يرجى تسجيل الدخول لعرض الملف الشخصي",
+  "edit_profile": "تعديل الملف الشخصي",
+  "edit_profile_subtitle": "تحديث المعلومات الشخصية",
+  "notification_settings": "إعدادات الإشعارات",
+  "notification_settings_subtitle": "تخصيص الإشعارات",
+  "privacy_security": "الخصوصية والأمان",
+  "privacy_security_subtitle": "إعدادات الأمان",
+  "help_support": "المساعدة والدعم",
+  "help_support_subtitle": "الدليل والمساعدة",
+  "logout_subtitle": "الخروج من التطبيق",
+  "app_version": "الإصدار 1.0.0",
+  "app_description": "تطبيق حجز المواعيد الطبية للمفاصل",
+  "booking_notification": "إشعار الحجز",
+  "reminder_notification": "إشعار التذكير",
+  "system_notification": "إشعار النظام",
+  "motivational_notification": "إشعار تحفيزي",
+  "notification": "إشعار",
+  "mark_as_read": "تحديد كمقروء",
+  "mark_as_read_error": "فشل في تحديث حالة الإشعار",
+  "booking_created_success": "تم إنشاء الحجز بنجاح!",
+  "booking_created_message": "تم تأكيد الحجز الخاص بك.",
+  "ok": "حسناً",
+  "booking_failed": "فشل في إنشاء الحجز",
+  "select_valid_timeslot": "يرجى اختيار فترة زمنية صحيحة قبل تأكيد الحجز",
+  "booking_details": "تفاصيل الحجز",
+  "booking_summary": "ملخص الحجز",
+  "confirm_booking": "تأكيد الحجز",
+  "booking_confirmed": "تم تأكيد الحجز",
+  "booking_cancelled": "تم إلغاء الحجز",
+  "booking_status": "حالة الحجز",
+  "booking_time": "وقت الحجز",
+  "booking_location": "موقع الحجز",
+  "booking_notes": "ملاحظات الحجز",
+  "no_notes": "لا توجد ملاحظات",
+  "refresh": "تحديث",
+  "pull_to_refresh": "اسحب للتحديث",
+  "no_data": "لا توجد بيانات",
+  "try_again": "حاول مرة أخرى",
+  "connection_error": "خطأ في الاتصال",
+  "server_error": "خطأ في الخادم",
+  "network_error": "خطأ في الشبكة",
+  "timeout_error": "انتهت مهلة الاتصال",
+  "invalid_input": "بيانات غير صحيحة",
+  "required_field": "هذا الحقل مطلوب",
+  "invalid_phone": "رقم هاتف غير صحيح",
+  "invalid_name": "اسم غير صحيح",
+  "success": "نجح",
+  "failed": "فشل",
+  "warning": "تحذير",
+  "info": "معلومات",
+  "yes": "نعم",
+  "no": "لا",
+  "back": "رجوع",
+  "next": "التالي",
+  "previous": "السابق",
+  "save": "حفظ",
+  "delete": "حذف",
+  "edit": "تعديل",
+  "add": "إضافة",
+  "remove": "إزالة",
+  "search": "بحث",
+  "filter": "تصفية",
+  "sort": "ترتيب",
+  "all": "الكل",
+  "today": "اليوم",
+  "tomorrow": "غداً",
+  "yesterday": "أمس",
+  "this_week": "هذا الأسبوع",
+  "next_week": "الأسبوع القادم",
+  "this_month": "هذا الشهر",
+  "next_month": "الشهر القادم",
+  "morning": "صباحاً",
+  "afternoon": "ظهراً",
+  "evening": "مساءً",
+  "night": "ليلاً",
+  "available": "متاح",
+  "unavailable": "غير متاح",
+  "busy": "مشغول",
+  "free": "متاح",
+  "confirmed": "مؤكد",
+  "pending": "في الانتظار",
+  "completed": "مكتمل",
+  "in_progress": "قيد التنفيذ",
+  "scheduled": "مجدول",
+  "urgent": "عاجل",
+  "normal": "عادي",
+  "low": "منخفض",
+  "medium": "متوسط",
+  "high": "عالي",
+  "critical": "حرج",
+  
+  "manage_your_bookings": "إدارة حجوزاتك",
+  "no_bookings_for_date": "لا توجد حجوزات لهذا التاريخ",
+  "no_bookings_today": "لا توجد حجوزات اليوم",
+  "no_bookings_selected_date": "لا توجد حجوزات للتاريخ المحدد",
+  "confirm_booking_details": "تأكيد تفاصيل الحجز",
+  "selected_hospital": "المستشفى المحدد",
+  "booking_pending_approval": "الحجز في انتظار الموافقة",
+  "confirming": "جاري التأكيد",
+  "booking_confirmation_info": "سيتم مراجعة حجزك من قبل الفريق الطبي",
+  "select": "اختيار",
+  "select_joint_type_description": "اختر نوع المفصل الذي تريد حجز موعد له",
+  "search_joint_types": "البحث في أنواع المفاصل",
+  "no_joint_types_found": "لم يتم العثور على أنواع مفاصل",
+  "try_different_search": "جرب بحثاً مختلفاً",
+  "no_joint_types_available": "لا توجد أنواع مفاصل متاحة",
+  "all_notifications_read": "جميع الإشعارات مقروءة",
+  "mark_all_read": "تحديد الكل كمقروء",
+  "mark_all_read_confirm": "هل تريد تحديد جميع الإشعارات كمقروءة؟",
+  "all_notifications_marked_read": "تم تحديد جميع الإشعارات كمقروءة",
+  "just_now": "الآن",
+  "hours_ago": "ساعات مضت",
+  "days_ago": "أيام مضت",
+  "unread_notifications": "إشعارات غير مقروءة",
+  "no_notifications_description": "ستظهر هنا الإشعارات الجديدة عند وصولها",
+  "footer_text": "IMSC - المركز الدولي للخدمات الطبية",
+  "capacity": "السعة",
+  "selected_date": "التاريخ المحدد",
+  "continue": "متابعة"
 } 
