--- a/mobile/assets/locales/en.json
+++ b/mobile/assets/locales/en.json
@@ -3,6 +3,7 @@
   "select_hospital": "Select Hospital",
   "login_button": "Login",
   "no_account": "Don't have an account? Register now",
+  "dont_have_account": "Don't have an account?",
   "confirmation": "Booking Confirmation",
   "jointType": "Joint Type",
   "date": "Date",
@@ -35,6 +36,7 @@
   "notifications": "Notifications",
   "pending_approval": "Pending Approval",
   "phone": "Phone Number",
+  "phone_number": "Phone Number",
   "password": "Password",
   "welcome": "Welcome",
   "select_language": "Select Language",
@@ -54,12 +56,147 @@
   "cancel": "Cancel",
   "please_login_first": "Please login first",
   "new_booking": "New Booking",
-  "my_bookings": "My Bookings",
   "cancelled": "Cancelled",
   "already_cancelled": "Booking is already cancelled",
   "markAllRead": "Mark All as Read",
   "noNotifications": "No notifications",
   "notificationPermission": "Notification Permission",
   "notificationPermissionMessage": "We need your permission to send notifications about your booking status",
-  "notificationPermissionDenied": "Notification permission denied"
+  "notificationPermissionDenied": "Notification permission denied",
+  
+  "welcome_to_imsc": "Welcome to IMSC",
+  "welcome_message": "International Medical Services Center - Joint Booking App",
+  "logout_confirm": "Are you sure you want to logout?",
+  "book_appointment": "Book Appointment",
+  "book_new_appointment": "Book New Appointment",
+  "view_bookings": "View Bookings",
+  "view_manage_bookings": "View & Manage Bookings",
+  "view_notifications": "View Notifications",
+  "about": "About App",
+  "app_info": "App Information",
+  "quick_actions": "Quick Actions",
+  "quick_stats": "Quick Stats",
+  "recent_activity": "Recent Activity",
+  "last_booking": "Last Booking",
+  "check_my_bookings": "Check My Bookings",
+  "profile": "Profile",
+  "profile_subtitle": "Please login to view your profile",
+  "edit_profile": "Edit Profile",
+  "edit_profile_subtitle": "Update personal information",
+  "notification_settings": "Notification Settings",
+  "notification_settings_subtitle": "Customize notifications",
+  "privacy_security": "Privacy & Security",
+  "privacy_security_subtitle": "Security settings",
+  "help_support": "Help & Support",
+  "help_support_subtitle": "Guide and help",
+  "logout_subtitle": "Logout from app",
+  "app_version": "Version 1.0.0",
+  "app_description": "Joint Medical Booking Application",
+  "booking_notification": "Booking Notification",
+  "reminder_notification": "Reminder Notification",
+  "system_notification": "System Notification",
+  "motivational_notification": "Motivational Notification",
+  "notification": "Notification",
+  "mark_as_read": "Mark as Read",
+  "mark_as_read_error": "Failed to update notification status",
+  "booking_created_success": "Booking created successfully!",
+  "booking_created_message": "Your booking has been confirmed.",
+  "ok": "OK",
+  "booking_failed": "Failed to create booking",
+  "select_valid_timeslot": "Please select a valid time slot before confirming booking",
+  "booking_details": "Booking Details",
+  "booking_summary": "Booking Summary",
+  "confirm_booking": "Confirm Booking",
+  "booking_confirmed": "Booking Confirmed",
+  "booking_cancelled": "Booking Cancelled",
+  "booking_status": "Booking Status",
+  "booking_time": "Booking Time",
+  "booking_location": "Booking Location",
+  "booking_notes": "Booking Notes",
+  "no_notes": "No notes",
+  "refresh": "Refresh",
+  "pull_to_refresh": "Pull to refresh",
+  "no_data": "No data",
+  "try_again": "Try Again",
+  "connection_error": "Connection Error",
+  "server_error": "Server Error",
+  "network_error": "Network Error",
+  "timeout_error": "Connection Timeout",
+  "invalid_input": "Invalid Input",
+  "required_field": "This field is required",
+  "invalid_phone": "Invalid phone number",
+  "invalid_name": "Invalid name",
+  "success": "Success",
+  "failed": "Failed",
+  "warning": "Warning",
+  "info": "Info",
+  "yes": "Yes",
+  "no": "No",
+  "back": "Back",
+  "next": "Next",
+  "previous": "Previous",
+  "save": "Save",
+  "delete": "Delete",
+  "edit": "Edit",
+  "add": "Add",
+  "remove": "Remove",
+  "search": "Search",
+  "filter": "Filter",
+  "sort": "Sort",
+  "all": "All",
+  "today": "Today",
+  "tomorrow": "Tomorrow",
+  "yesterday": "Yesterday",
+  "this_week": "This Week",
+  "next_week": "Next Week",
+  "this_month": "This Month",
+  "next_month": "Next Month",
+  "morning": "Morning",
+  "afternoon": "Afternoon",
+  "evening": "Evening",
+  "night": "Night",
+  "available": "Available",
+  "unavailable": "Unavailable",
+  "busy": "Busy",
+  "free": "Free",
+  "confirmed": "Confirmed",
+  "pending": "Pending",
+  "completed": "Completed",
+  "in_progress": "In Progress",
+  "scheduled": "Scheduled",
+  "urgent": "Urgent",
+  "normal": "Normal",
+  "low": "Low",
+  "medium": "Medium",
+  "high": "High",
+  "critical": "Critical",
+  
+  "manage_your_bookings": "Manage Your Bookings",
+  "no_bookings_for_date": "No bookings for this date",
+  "no_bookings_today": "No bookings today",
+  "no_bookings_selected_date": "No bookings for selected date",
+  "confirm_booking_details": "Confirm Booking Details",
+  "selected_hospital": "Selected Hospital",
+  "booking_pending_approval": "Booking pending approval",
+  "confirming": "Confirming",
+  "booking_confirmation_info": "Your booking will be reviewed by the medical team",
+  "select": "Select",
+  "select_joint_type_description": "Select the joint type you want to book an appointment for",
+  "search_joint_types": "Search joint types",
+  "no_joint_types_found": "No joint types found",
+  "try_different_search": "Try a different search",
+  "no_joint_types_available": "No joint types available",
+  "all_notifications_read": "All notifications read",
+  "mark_all_read": "Mark All as Read",
+  "mark_all_read_confirm": "Do you want to mark all notifications as read?",
+  "all_notifications_marked_read": "All notifications marked as read",
+  "just_now": "Just now",
+  "hours_ago": "hours ago",
+  "days_ago": "days ago",
+  "unread_notifications": "unread notifications",
+  "no_notifications_description": "New notifications will appear here when they arrive",
+  "footer_text": "IMSC - International Medical Services Center",
+  "capacity": "Capacity",
+  "selected_date": "Selected Date",
+  "continue": "Continue"
 } 
